--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- LinkedIn Button -->
         <div class="social-icons">
-            <a href="https://www.linkedin.com/in/ethanshahbaz" target="_blank">
+            <a href="https://www.linkedin.com/" target="_blank">
                 <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn Logo">
             </a>
         </div>
