--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
 	</head>
 	<body class="is-preload">
 
+		
+		<nav id="heading-list">
+			<ul>
+				<li><a href="#one">Section 1</a></li>
+				<li><a href="#two">Section 2</a></li>
+				<li><a href="#three">Section 3</a></li>
+			</ul>
+		</nav>
+
+
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Generating</strong>, soon to be<br />
-					<br />
-					</a>.</h1>
+					<h1><strong>Generating...</strong><br />
+					</a>coming soon.</h1>
 				</div>
 			</header>
 
@@ -435,13 +444,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Inhouse Design</li>
+						<li>&copy; eshahbaz</li><li>Inhouse Design</li>
 					</ul>
 				</div>
 			</footer>
