--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 	</head>
 	<body class="is-preload">
 
-		
+		<!-- Side Nav Tracker Heading List -->
 		<nav id="heading-list">
 			<ul>
-				<li><a href="#one">Section 1</a></li>
-				<li><a href="#two">Section 2</a></li>
-				<li><a href="#three">Section 3</a></li>
+				<li><a href="#one">About Me</a></li>
+				<li><a href="#two">Skills</a></li>
+				<li><a href="#three">Contact</a></li>
 			</ul>
 		</nav>
-
 
 		<!-- Header -->
 			<header id="header">
