--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Generating...</strong><br />
-					</a>EMILIN U SPOON U STINNKY RAT YAPPA YAPPA YAPPA</h1>
+					</a>coming soon.</h1>
 				</div>
 			</header>
 
