--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
 										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										Sydney, NSW 2000<br />
+										Australia, Earth
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
