--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 					<h1><strong>Generating...</strong><br />
 					</a>coming soon.</h1>
 				</div>
+				<script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.30/build/spline-viewer.js"></script>
+<spline-viewer url="https://prod.spline.design/6rE8EOHgD2jOE3NK/scene.splinecode"></spline-viewer>
 			</header>
 
 		<!-- Main -->
