--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 			</header>
 			<p>This is filler text, absolute jibberish. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia
 				ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque
-				commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi
-				lorem vulputate lorem neque cubilia.</p>
+				commodo blandit enim arcu non at amet id arcu magna.</p>
 			<ul class="actions">
 				<li><a href="#" class="button">Learn More</a></li>
 			</ul>
