--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 				<span>& Tech Innovator</span>
 			</h1>
 		</div>
+		<div class="header-footer">
+			<ul class="icons">
+				<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+				<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; eshahbaz</li>
+				<li>Inhouse Design</li>
+			</ul>
+		</div>
 	</header>
 
 	<!-- Main -->
@@ -452,21 +463,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				-->
 
 	</div>
-
-	<!-- Footer -->
-	<footer id="footer">
-		<div class="inner">
-			<ul class="icons">
-				<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-				<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-				<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-			</ul>
-			<ul class="copyright">
-				<li>&copy; eshahbaz</li>
-				<li>Inhouse Design</li>
-			</ul>
-		</div>
-	</footer>
 
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
