--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 		</div>
 		<div class="header-footer">
 			<ul class="icons">
-				<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a href="https://www.linkedin.com/in/ethanshahbaz/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 				<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-				<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="mailto:ethanshahbaz@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; eshahbaz</li>
@@ -134,7 +134,7 @@
 						</li>
 						<li>
 							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-							<a href="mailto:your.email@example.com">your.email@example.com</a>
+							<a href="mailto:ethanshahbaz@gmail.com">ethanshahbaz@gmail.com</a>
 						</li>
 					</ul>
 				</div>
