--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 	<header id="header">
 		<div id="header-background"></div>
 		<div class="inner">
-			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="#" class="image avatar"><img src="images/profilepic.png" alt="" /></a>
 			<h1>
 				<strong>Ethan Shahbaz</strong>
 				<span>Mechatronic Engineer</span>
-				<span>& Tech Innovator</span>
+				<span>& Innovator</span>
 			</h1>
 		</div>
 		<div class="header-footer">
@@ -42,7 +42,7 @@
 			</ul>
 			<ul class="copyright">
 				<li>&copy; eshahbaz</li>
-				<li>Inhouse Design</li>
+				<li>In-house Design</li>
 			</ul>
 		</div>
 	</header>
@@ -64,15 +64,15 @@
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<h3>Programming</h3>
-					<p>Java, Python, C/C++, MATLAB, Object-Oriented Programming, Algorithms & Data Structures</p>
+					<p>Java, Python, C/C++, MATLAB, Algorithms & Data Structures, Object-Oriented Programming</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<h3>Software</h3>
-					<p>Simulink, GitHub, COMSOL Multiphysics, ABB RobotStudio, ROS, 3D CAD, LTspice, MPLAB X IDE</p>
+					<p>Simulink, GitHub, COMSOL Multiphysics, ABB RobotStudio, ROS, Altium Designer, 2D/3D CAD, LTspice, MPLAB X IDE, Atlassian Jira, Trading & Financial Platforms, AI applications.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<h3>Mechatronics</h3>
-					<p>Microprocessors, Wireless Communications, PLCs, Mechanics & 3D printing, Embedded Systems, MEMS</p>
+					<p>Arduino, ESP32, Raspberry Pi, Wireless Communications, PLCs, Mechanics & 3D printing, Embedded Systems, Micro-Electromechanical Systems (MEMS), Prototyping, Testing & Validation</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<h3>Project Management</h3>
@@ -87,18 +87,18 @@
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-					<h3>Edge Computing for Autonomous Swarms</h3>
-					<p>Thesis project focusing on navigation and collision avoidance strategies for autonomous drone swarms.</p>
+					<h3>Edge Computing for Autonomous Swarm Robotics</h3>
+					<p>Thesis project focusing on edge computing as a solution for enhanced navigation & collision avoidance strategies for autonomous drone swarms.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 					<h3>Drone Monitoring System</h3>
-					<p>Developed a wireless GUI for real-time sensor feedback and power supply monitoring in MURC.</p>
+					<p>Developed a wireless GUI for real-time sensor feedback, sensor-fusion and power supply monitoring.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 					<h3>E-Commerce Automation</h3>
-					<p>Built and managed four successful online brands with automated systems and marketing funnels.</p>
+					<p>Built and managed four successful online brands with automated systems and marketing strategies.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
@@ -114,11 +114,11 @@
 			<p>I'm always interested in new opportunities, collaborations, and innovative projects. Feel free to reach out!</p>
 			<div class="row">
 				<div class="col-8 col-12-small">
-					<form method="post" action="#">
+					<form action="https://formspree.io/f/mgvoyqdj" method="POST">
 						<div class="row gtr-uniform gtr-50">
-							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" required /></div>
+							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" required /></div>
+							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4" required></textarea></div>
 						</div>
 						<ul class="actions" style="margin-top: 2em;">
 							<li><input type="submit" value="Send Message" /></li>
