--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<header id="header">
 		<div id="header-background"></div>
 		<div class="inner">
-			<a href="#" class="image avatar"><img src="images/profilepic.png" alt="" /></a>
+			<a href="#" class="image avatar"><img src="images/PP.jpg" alt="Profile Picture" /></a>
 			<h1>
 				<strong>Ethan Shahbaz</strong>
 				<span>Mechatronic Engineer</span>
