--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 
 <body class="is-preload">
 
+	<!-- Mobile Menu Button -->
+	<div class="mobile-menu-button">
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
+
+	<!-- Mobile Navigation -->
+	<nav id="mobile-nav">
+		<ul>
+			<li><a href="#one" class="nav-link">About</a></li>
+			<li><a href="#two" class="nav-link">Skills</a></li>
+			<li><a href="#projects" class="nav-link">Projects</a></li>
+			<li><a href="#three" class="nav-link">Contact</a></li>
+		</ul>
+	</nav>
+
 	<!-- Side Nav Tracker Heading List -->
 	<nav id="heading-list">
 		<ul>
@@ -152,6 +169,7 @@
 	<script src="assets/js/magnetLines.js"></script>
 	<script src="assets/js/clickSpark.js"></script>
 	<script src="assets/js/navigation.js"></script>
+	<script src="assets/js/mobile-menu.js"></script>
 	<script>
 		// Initialize click spark with custom settings
 		createClickSpark({
