section URL change (test2)
no change to url after section select
test 2

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 	<!-- Mobile Navigation -->
 	<nav id="mobile-nav">
 		<ul>
-			<li><a href="#one" class="nav-link">About</a></li>
-			<li><a href="#two" class="nav-link">Skills</a></li>
-			<li><a href="#projects" class="nav-link">Projects</a></li>
-			<li><a href="#three" class="nav-link">Contact</a></li>
+			<li><a data-section="one" class="nav-link">About</a></li>
+			<li><a data-section="two" class="nav-link">Skills</a></li>
+			<li><a data-section="projects" class="nav-link">Projects</a></li>
+			<li><a data-section="three" class="nav-link">Contact</a></li>
 		</ul>
 	</nav>
 
 	<!-- Side Nav Tracker Heading List -->
 	<nav id="heading-list">
 		<ul>
-			<li><a href="#one" class="nav-link">About</a></li>
-			<li><a href="#two" class="nav-link">Skills</a></li>
-			<li><a href="#projects" class="nav-link">Projects</a></li>
-			<li><a href="#three" class="nav-link">Contact</a></li>
+			<li><a data-section="one" class="nav-link">About</a></li>
+			<li><a data-section="two" class="nav-link">Skills</a></li>
+			<li><a data-section="projects" class="nav-link">Projects</a></li>
+			<li><a data-section="three" class="nav-link">Contact</a></li>
 		</ul>
 	</nav>
 
