--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<header id="header">
 		<div id="header-background"></div>
 		<div class="inner">
-			<a href="#" class="image avatar"><img src="images/PP.jpg" alt="Profile Picture" /></a>
+			<a href="javascript:void(0);" class="image avatar"><img src="images/PP.jpg" alt="Profile Picture" /></a>
 			<h1>
 				<strong>Ethan Shahbaz</strong>
 				<span>Mechatronic Engineer</span>
@@ -54,7 +54,7 @@
 		<div class="header-footer">
 			<ul class="icons">
 				<li><a href="https://www.linkedin.com/in/ethanshahbaz/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-				<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+				<li><a href="javascript:void(0);" class="icon brands fa-github"><span class="label">Github</span></a></li>
 				<li><a href="mailto:ethanshahbaz@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
