--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
 				</div>
 			</div>
 		</section>
+
+		<!-- Back to Top Button -->
+		<div id="back-to-top">
+			<a href="javascript:void(0);" class="icon solid fa-chevron-up"><span class="label">Back to Top</span></a>
+		</div>
+
 	</div>
 
 	<!-- Scripts -->
@@ -170,6 +176,7 @@
 	<script src="assets/js/clickSpark.js"></script>
 	<script src="assets/js/navigation.js"></script>
 	<script src="assets/js/mobile-menu.js"></script>
+	<script src="assets/js/back-to-top.js"></script>
 	<script>
 		// Initialize click spark with custom settings
 		createClickSpark({
