burger menu + Skills Icons fixed
fixed burger menu. Added skills icons that Floooat!

--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
 			<h2>Skills & Expertise</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<h3>Programming</h3>
+					<h3><i class="fas fa-code"></i> Programming</h3>
 					<p>Java, Python, C/C++, MATLAB, Algorithms & Data Structures, Object-Oriented Programming</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<h3>Software</h3>
+					<h3><i class="fas fa-laptop-code"></i> Software</h3>
 					<p>Simulink, GitHub, COMSOL Multiphysics, ABB RobotStudio, ROS, Altium Designer, 2D/3D CAD, LTspice, MPLAB X IDE, Atlassian Jira, Trading & Financial Platforms, AI applications.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<h3>Mechatronics</h3>
+					<h3><i class="fas fa-robot"></i> Mechatronics</h3>
 					<p>Arduino, ESP32, Raspberry Pi, Wireless Communications, PLCs, Mechanics & 3D printing, Embedded Systems, Micro-Electromechanical Systems (MEMS), Prototyping, Testing & Validation</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<h3>Project Management</h3>
+					<h3><i class="fas fa-tasks"></i> Project Management</h3>
 					<p>Team Leadership, Systems Engineering, Quality Assurance, Stakeholder Engagement</p>
 				</article>
 			</div>
