--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<header id="header">
 		<div id="header-background"></div>
 		<div class="inner">
-			<a href="javascript:void(0);" class="image avatar"><img src="images/PP.jpg" alt="Profile Picture" /></a>
+			<a class="image avatar"><img src="images/PP.jpg" alt="Profile Picture" /></a>
 			<h1>
 				<strong>Ethan Shahbaz</strong>
 				<span>Mechatronic Engineer</span>
