--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 	<!-- Mobile Navigation -->
 	<nav id="mobile-nav">
 		<ul>
-			<li><a href="#one" class="nav-link">About</a></li>
-			<li><a href="#two" class="nav-link">Skills</a></li>
+			<li><a href="#about" class="nav-link">About</a></li>
+			<li><a href="#skills" class="nav-link">Skills</a></li>
 			<li><a href="#projects" class="nav-link">Projects</a></li>
-			<li><a href="#three" class="nav-link">Contact</a></li>
+			<li><a href="#contact" class="nav-link">Contact</a></li>
 		</ul>
 	</nav>
 
 	<!-- Side Nav Tracker Heading List -->
 	<nav id="heading-list">
 		<ul>
-			<li><a href="#one" class="nav-link">About</a></li>
-			<li><a href="#two" class="nav-link">Skills</a></li>
+			<li><a href="#about" class="nav-link">About</a></li>
+			<li><a href="#skills" class="nav-link">Skills</a></li>
 			<li><a href="#projects" class="nav-link">Projects</a></li>
-			<li><a href="#three" class="nav-link">Contact</a></li>
+			<li><a href="#contact" class="nav-link">Contact</a></li>
 		</ul>
 	</nav>
 
@@ -68,7 +68,7 @@
 	<div id="main">
 
 		<!-- One -->
-		<section id="one">
+		<section id="about">
 			<header class="major">
 				<h2>About Me</h2>
 			</header>
@@ -76,7 +76,7 @@
 		</section>
 
 		<!-- Two -->
-		<section id="two">
+		<section id="skills">
 			<h2>Skills & Expertise</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
@@ -126,7 +126,7 @@
 		</section>
 
 		<!-- Three -->
-		<section id="three">
+		<section id="contact">
 			<h2>Get In Touch</h2>
 			<p>I'm always interested in new opportunities, collaborations, and innovative projects. Feel free to reach out!</p>
 			<div class="row">
