Add Firebase integration with secure configuration: - Updated security rules - Added proper error handling - Improved gitignore - Added visitor counter and likes system

--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
 	</div>
 
 	<!-- Scripts -->
+	<script src="config.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
 	<script src="assets/js/jquery.min.js"></script>
