--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="inner">
 			<a class="image avatar"><img src="images/PP.jpg" alt="Profile Picture" /></a>
 			<h1>
-				<strong>3than Shahbaz</strong>
+				<strong>Ethan Shahbaz</strong>
 				<span>Mechatronic Engineer</span>
 				<span>& Innovator</span>
 			</h1>
