--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/custom.css" />
 	<link rel="stylesheet" href="assets/css/modal.css" />
+	<link rel="stylesheet" href="assets/css/animations.css" />
 	<link rel="icon" href="images/favicon.png" type="image/png">
 	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
@@ -236,10 +237,11 @@
 	<script src="assets/js/mobile-menu.js"></script>
 	<script src="assets/js/back-to-top.js"></script>
 	<script src="assets/js/modal.js"></script>
+	<script src="assets/js/scroll-animations.js"></script>
 	<script>
 		// Initialize click spark with custom settings
 		createClickSpark({
-			sparkColor: '#4acaa8', // Match your theme color
+			sparkColor: '#4acaa8',
 			sparkSize: 8,
 			sparkRadius: 12,
 			sparkCount: 10,
