--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="assets/css/custom.css" />
 	<link rel="stylesheet" href="assets/css/modal.css" />
 	<link rel="stylesheet" href="assets/css/animations.css" />
+	<link rel="stylesheet" href="assets/css/certifications.css" />
 	<link rel="icon" href="images/favicon.png" type="image/png">
 	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
@@ -29,6 +30,7 @@
 			<li><a href="#about" class="nav-link">About</a></li>
 			<li><a href="#skills" class="nav-link">Skills</a></li>
 			<li><a href="#projects" class="nav-link">Projects</a></li>
+			<li><a href="#certifications" class="nav-link">Certifications</a></li>
 			<li><a href="#contact" class="nav-link">Contact</a></li>
 		</ul>
 	</nav>
@@ -39,6 +41,7 @@
 			<li><a href="#about" class="nav-link">About</a></li>
 			<li><a href="#skills" class="nav-link">Skills</a></li>
 			<li><a href="#projects" class="nav-link">Projects</a></li>
+			<li><a href="#certifications" class="nav-link">Certifications</a></li>
 			<li><a href="#contact" class="nav-link">Contact</a></li>
 		</ul>
 	</nav>
@@ -170,6 +173,55 @@
 			</div>
 		</section>
 
+		<!-- Certifications -->
+		<section id="certifications">
+			<h2>Certifications</h2>
+			<div class="row">
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="#" class="certification-link" data-cert="degree">
+						<h3><i class="fas fa-graduation-cap"></i> Mechatronic Engineering Bachelor (Honours)</h3>
+						<p>University of Technology Sydney</p>
+					</a>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="#" class="certification-link" data-cert="ford">
+						<h3><i class="fas fa-car"></i> Digital Advanced Program</h3>
+						<p>Ford Motor Company</p>
+					</a>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="#" class="certification-link" data-cert="ycombinator">
+						<h3><i class="fas fa-rocket"></i> Startup Work Experience</h3>
+						<p>Y Combinator</p>
+					</a>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="#" class="certification-link" data-cert="deloitte">
+						<h3><i class="fas fa-laptop-code"></i> Technology Program</h3>
+						<p>Deloitte</p>
+					</a>
+				</article>
+			</div>
+		</section>
+
+		<!-- Certification Modal -->
+		<div id="certification-modal" class="modal">
+			<div class="modal-content">
+				<span class="close-modal">&times;</span>
+				<h3 id="cert-title"></h3>
+				<div class="cert-details">
+					<p><strong>Date Issued:</strong> <span id="cert-date"></span></p>
+					<p><strong>Credential ID:</strong> <span id="cert-id"></span></p>
+					<div class="cert-skills">
+						<strong>Skills:</strong>
+						<ul id="cert-skills"></ul>
+					</div>
+					<p id="cert-description"></p>
+					<a id="cert-link" href="#" target="_blank" class="button">View Credential</a>
+				</div>
+			</div>
+		</div>
+
 		<!-- Three -->
 		<section id="contact">
 			<h2>Get In Touch</h2>
@@ -238,6 +290,7 @@
 	<script src="assets/js/back-to-top.js"></script>
 	<script src="assets/js/modal.js"></script>
 	<script src="assets/js/scroll-animations.js"></script>
+	<script src="assets/js/certifications.js"></script>
 	<script>
 		// Initialize click spark with custom settings
 		createClickSpark({
