fixed modals & cert section
d

--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="#" class="certification-link" data-cert="degree">
-						<h3><i class="fas fa-graduation-cap"></i> Mechatronics Engineering Bachelor (Honours)</h3>
-						<p>Macquarie University</p>
+						<h3><i class="fas fa-graduation-cap"></i> Mechatronic Engineering Bachelor (Honours)</h3>
+						<p>University of Technology Sydney</p>
 					</a>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="#" class="certification-link" data-cert="ford">
-						<h3><i class="fas fa-car"></i> Advanced Digital Program</h3>
+						<h3><i class="fas fa-car"></i> Digital Advanced Program</h3>
 						<p>Ford Motor Company</p>
 					</a>
 				</article>
@@ -211,13 +211,12 @@
 				<h3 id="cert-title"></h3>
 				<div class="cert-details">
 					<p><strong>Date Issued:</strong> <span id="cert-date"></span></p>
-					<a id="cert-link" href="#" target="_blank" class="button">View Credential</a>
 					<div class="cert-skills">
 						<strong>Skills:</strong>
 						<ul id="cert-skills"></ul>
 					</div>
 					<p id="cert-description"></p>
-					<p id="cert-id" class="credential-id"></p>
+					<a id="cert-link" href="#" target="_blank" class="button">View Credential</a>
 				</div>
 			</div>
 		</div>
