--- a/index.html
+++ b/index.html
@@ -290,6 +290,16 @@
 	<script src="assets/js/modal.js"></script>
 	<script src="assets/js/scroll-animations.js"></script>
 	<script src="assets/js/certifications.js"></script>
+	
+	<!-- Vercel Speed Insights -->
+	<script>
+		window.addEventListener('load', function() {
+			const script = document.createElement('script');
+			script.src = '/_vercel/speed-insights/script.js';
+			document.head.appendChild(script);
+		});
+	</script>
+
 	<script>
 		// Initialize click spark with custom settings
 		createClickSpark({
