--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<h3><i class="fas fa-code"></i> Programming</h3>
-					<p>Java, Python, C/C++, MATLAB, Algorithms & Data Structures, Object-Oriented Programming, Fullstack Development, Firebase.</p>
+					<p>Java, Python, C/C++, MATLAB, Algorithms & Data Structures, Object-Oriented Programming, Fullstack Development, Firebase, Vercel.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<h3><i class="fas fa-laptop-code"></i> Software</h3>
@@ -309,7 +309,7 @@
 			document.head.appendChild(script);
 		});
 	</script>
-	
+
 	<script>
 		// Initialize click spark with custom settings
 		createClickSpark({
