--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; eshahbaz</li>
-						<li>In-house Design</li>
+						<li>Designed & Developed by me :) </li>
 					</ul>
 				</div>
 				<div class="right-content">
